--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,7 +51,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>javax</groupId>
+     <artifactId>javaee-api</artifactId>
+     <version>8.0.1</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
