--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-select": "^5.0.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.21.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
