--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
+    "react-currency-input-field": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
     "react-router-dom": "5.2.0",
