--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "frontend",
+  "name": "frontweb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
@@ -13,31 +13,33 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-paginate": "^7.1.1",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/react-select": "^5.0.1",
-    "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "jwt-decode": "^3.1.2",
+    "msw": "^0.33.2",
     "node-sass": "4.14.1",
-    "qs": "^6.10.2",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-content-loader": "^6.0.3",
-    "react-currency-input-field": "^3.6.0",
+    "react-currency-input-field": "^3.4.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.21.0",
-    "react-paginate": "^8.1.0",
-    "react-router-dom": "5.2.0",
+    "react-hook-form": "^7.10.1",
+    "react-paginate": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "^5.2.1",
-    "react-toastify": "^8.1.0",
+    "react-select": "^4.3.1",
+    "react-select-event": "^5.3.0",
+    "react-toastify": "^7.0.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll=false",
-    "test:watch": "react-scripts test",
+    "test": "react-scripts test --watchAll=false --testPathIgnorePatterns='fixtures.ts'",
+    "test:watch": "react-scripts test --testPathIgnorePatterns='fixtures.ts'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
