--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
-FROM openjdk:11
-VOLUME /tmp
+FROM maven:3.8.4 AS build
+COPY . .
+RUN mvn clean package -DskipTests
+
+FROM openjdk:11 AS jdk
+COPY --from=build /target/*.jar /app.jar
 EXPOSE 8080
-ADD ./target/dscatalog-0.0.1-SNAPSHOT.jar dscatalog.jar
-ENTRYPOINT ["java","-jar","/dscatalog.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
